--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -101,9 +101,14 @@
     <script src="/js/dependencies/angular-toastr.tpls.js"></script>
     <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/lodash.js"></script>
+    <script src="/js/dependencies/mqttws31.js"></script>
     <script src="/js/public/catfeeder/CatfeederModule.js"></script>
+    <script src="/js/public/angularSocketIo.js"></script>
     <script src="/js/public/catfeeder/CatfeederController.js"></script>
+    <script src="/js/public/catfeeder/FeedController.js"></script>
     <script src="/js/public/common.js"></script>
+    <script src="/js/public/mqtt.factory.js"></script>
+    <script src="/js/public/panelWidget.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
