--- a/assets/templates/main.html
+++ b/assets/templates/main.html
@@ -5,8 +5,11 @@
         </section>
         <section layout-align="end center">
             
-            <md-button aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+            <md-button aria-label="Open Settings" ng-click="showSettings($event)">
                 <md-icon>more_vert</md-icon>
+                <md-tooltip md-direction="bottom">
+                    Parametres
+                </md-tooltip>
             </md-button>
         </section>
     </md-toolbar>
