--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -102,6 +102,7 @@
     <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/lodash.js"></script>
     <script src="/js/dependencies/mqttws31.js"></script>
+    <script src="/js/dependencies/sailsResource.js"></script>
     <script src="/js/public/catfeeder/CatfeederModule.js"></script>
     <script src="/js/public/angularSocketIo.js"></script>
     <script src="/js/public/catfeeder/CatfeederController.js"></script>
