--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
     <script src="/js/dependencies/angular-ui-router.js"></script>
     <script src="/js/dependencies/lodash.js"></script>
     <script src="/js/dependencies/mqttws31.js"></script>
+    <script src="/js/dependencies/sailsResource.js"></script>
     <script src="/js/public/catfeeder/CatfeederModule.js"></script>
     <script src="/js/public/angularSocketIo.js"></script>
     <script src="/js/public/catfeeder/CatfeederController.js"></script>
